# ResearchGraph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ResearchGraph/: .gitignore
data/: model_hub.json  self_learning.json
docs/: agentic_blueprint.md
src/research_graph/: __init__.py  app.py  arxiv_search.py  citation_graph.py  codegen.py  embeddings.py  export.py  graphs.py  learning.py  llm_router.py  mcp_client.py  model_hub.py  models.py  paper_search.py  pdf_ingestion.py  persistence.py  runtime.py  runtime_models.py  sandbox.py  schema.py  seed.py  service.py  tools.py  tracing.py  turboquant.py
src/research_graph/static/: app.js  index.html  styles.css
tests/: test_api.py  test_background_run.py  test_graphs.py  test_model_hub.py  test_runtime.py
